CASU-011520-1 A propos and mission page. Fixed tablette view for navigation menu

--- a/themes/custom/casu_bootstrap/casu_bootstrap.libraries.yml
+++ b/themes/custom/casu_bootstrap/casu_bootstrap.libraries.yml
@@ -9,6 +9,7 @@ framework:
       css/components/footer.css: {}
       css/pages/bureau.css: {}
       css/pages/projets.css: {}
+      css/pages/mission.css: {}
   js:
     js/front-page.js: {}
     js/bureau-view.js: {}
